# Leader-Follower-LeFo

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
configs/: default.yaml
docs/: installation.md
scripts/: download_data.py  evaluate.py  inference.py  train.py  visualize_results.py
src/lefo/: __init__.py  cli.py  config.py  data.py  evaluate.py  game.py  models.py  train.py  utils.py  visualization.py
tests/: __init__.py  test_game.py  test_models.py
