# Leader-Follower (LeFo): Signal Prediction for Loss Mitigation in Tactile Internet
# Author: Mohammad Ali Vahedifar (av@ece.au.dk)
# IEEE MLSP 2025

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lefo-tactile"
version = "1.0.0"
description = "Leader-Follower Game-Theoretic Signal Prediction for Tactile Internet"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mohammad Ali Vahedifar", email = "av@ece.au.dk"},
    {name = "Qi Zhang", email = "qz@ece.au.dk"},
]
maintainers = [
    {name = "Mohammad Ali Vahedifar", email = "av@ece.au.dk"},
]
keywords = [
    "tactile-internet",
    "signal-prediction", 
    "game-theory",
    "stackelberg-game",
    "neural-network",
    "haptic-feedback",
    "teleoperation",
    "human-robot-interaction",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "torch>=2.0.0",
    "scikit-learn>=1.0.0",
    "pyyaml>=6.0",
    "omegaconf>=2.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "tqdm>=4.64.0",
    "tensorboard>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "isort>=5.10.0",
    "mypy>=0.990",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
all = ["lefo-tactile[dev,docs]"]

[project.urls]
Homepage = "https://github.com/Ali-Vahedifar/Leader-Follower-LeFo"
Documentation = "https://github.com/Ali-Vahedifar/Leader-Follower-LeFo#readme"
Repository = "https://github.com/Ali-Vahedifar/Leader-Follower-LeFo.git"
Issues = "https://github.com/Ali-Vahedifar/Leader-Follower-LeFo/issues"

[project.scripts]
lefo-train = "lefo.cli:train"
lefo-evaluate = "lefo.cli:evaluate"
lefo-predict = "lefo.cli:predict"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["lefo"]
skip = [".gitignore", ".dockerignore"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
